# weather-predictor

./: .gitignore  pyproject.toml
src/weather_predictor/: cli.py  features.py  train.py
tests/: test_features.py
