[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-predictor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn",
    "pandas",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
predict = "weather_predictor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]